# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  hexlet-check.yml
gendiff/: __init__.py  args_parser.py  find_diff.py  format_diff.py  generate_diff.py  loader.py
gendiff/formaters/: __init__.py  format_diff.py  format_value.py  json.py  plain.py  stylish.py
gendiff/scripts/: __init__.py  gendiff.py
tests/: test_format_diff.py  test_loader.py
tests/fixtures/: diff_nested_json_formater.txt  diff_nested_stylish.txt  diff_nested_stylish2.txt  nested11.json  nested12.json  nested21.json  nested22.json
tests/scripts/: test_gendiff.py
