[tool.poetry]
name = "hexlet_code"
version = "0.1.0"
description = ""
authors = ["ikievite <ikievite@gmail.com>"]
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
