[tool.poetry]
name = "hexlet_code"
version = "0.2.1"
description = ""
authors = ["ikievite <ikievite@gmail.com>"]
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.1"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

