[tool.poetry]
name = "hexlet-code"
version = "0.3.3"
description = ""
authors = ["ikievite <ikievite@gmail.com>"]
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.1"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

